--- a/css/studio.css
+++ b/css/studio.css
@@ -81,3 +81,9 @@ noscript {
 .bootbox table#commitHistory tr:hover {
   cursor: pointer;
 }
+
+/* line 81, ../sass/studio.scss */
+#commitViewer {
+  width: 100%;
+  height: 480px;
+}
