Added environment directory (env) for all users All JS files in the 'env' directory can be runned by typing their name in the terminal Added commands cache for external commands Added run menu Added HTML, CSS and JavaScript file imports system for run

--- a/sass/studio.scss
+++ b/sass/studio.scss
@@ -87,6 +87,17 @@ noscript {
     border-top: 1px solid gray;
 }
 
+#runner {
+    position: absolute;
+    z-index: 3;
+    top: 20%;
+    left: 20%;
+    right: 20%;
+    bottom: 20%;
+    border: 2px solid black;
+    background-color: white;
+}
+
 .bootbox table#commitHistory tr:hover {
     cursor: pointer;
 }
