--- a/css/studio.css
+++ b/css/studio.css
@@ -92,11 +92,23 @@ noscript {
 }
 
 /* line 90, ../sass/studio.scss */
+#runner {
+  position: absolute;
+  z-index: 3;
+  top: 20%;
+  left: 20%;
+  right: 20%;
+  bottom: 20%;
+  border: 2px solid black;
+  background-color: white;
+}
+
+/* line 101, ../sass/studio.scss */
 .bootbox table#commitHistory tr:hover {
   cursor: pointer;
 }
 
-/* line 94, ../sass/studio.scss */
+/* line 105, ../sass/studio.scss */
 #commitViewer {
   width: 100%;
   height: 480px;
