--- a/css/studio.css
+++ b/css/studio.css
@@ -1,15 +1,15 @@
-/* line 8, ../sass/studio.scss */
+/* line 7, ../sass/studio.scss */
 body, #menu, #panel, #tabs, #settings, #status {
   background-color: beige;
 }
 
-/* line 12, ../sass/studio.scss */
+/* line 11, ../sass/studio.scss */
 #menu, #panel, #tabs, #editor, #terminal-container, #settings, #status {
   position: absolute;
   z-index: 0;
 }
 
-/* line 17, ../sass/studio.scss */
+/* line 16, ../sass/studio.scss */
 noscript {
   position: absolute;
   top: 0;
@@ -22,7 +22,7 @@ noscript {
   background-color: white;
 }
 
-/* line 29, ../sass/studio.scss */
+/* line 28, ../sass/studio.scss */
 #menu {
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@ noscript {
   z-index: 999;
 }
 
-/* line 37, ../sass/studio.scss */
+/* line 36, ../sass/studio.scss */
 #panel {
   top: 50px;
   left: 0;
@@ -40,7 +40,7 @@ noscript {
   border-right: 1px solid #bbbbbb;
 }
 
-/* line 45, ../sass/studio.scss */
+/* line 44, ../sass/studio.scss */
 #tabs {
   top: 50px;
   left: 15%;
@@ -48,7 +48,15 @@ noscript {
   right: 0;
 }
 
-/* line 52, ../sass/studio.scss */
+/* line 51, ../sass/studio.scss */
+#status {
+  top: 60px;
+  right: 10px;
+  height: 20px;
+  font-family: Open Sans;
+}
+
+/* line 58, ../sass/studio.scss */
 #editor {
   top: 90px;
   left: 15%;
@@ -56,15 +64,15 @@ noscript {
   bottom: 0;
 }
 
-/* line 59, ../sass/studio.scss */
+/* line 65, ../sass/studio.scss */
 #terminal-container {
   left: 15%;
   right: 0;
-  bottom: 20px;
+  bottom: 0;
   height: 40%;
 }
 
-/* line 66, ../sass/studio.scss */
+/* line 72, ../sass/studio.scss */
 #terminal {
   position: absolute;
   top: 28px;
@@ -73,7 +81,7 @@ noscript {
   bottom: 0;
 }
 
-/* line 74, ../sass/studio.scss */
+/* line 80, ../sass/studio.scss */
 #settings {
   top: 0;
   left: 0;
@@ -82,16 +90,7 @@ noscript {
   z-index: 1002;
 }
 
-/* line 82, ../sass/studio.scss */
-#status {
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 20px;
-  border-top: 1px solid gray;
-}
-
-/* line 90, ../sass/studio.scss */
+/* line 88, ../sass/studio.scss */
 #runner {
   position: absolute;
   z-index: 3;
@@ -103,12 +102,12 @@ noscript {
   background-color: white;
 }
 
-/* line 101, ../sass/studio.scss */
+/* line 99, ../sass/studio.scss */
 .bootbox table#commitHistory tr:hover {
   cursor: pointer;
 }
 
-/* line 105, ../sass/studio.scss */
+/* line 103, ../sass/studio.scss */
 #commitViewer {
   width: 100%;
   height: 480px;
